[build-system]
requires = ["setuptools>=64.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "perpl"
version = "1.1.0"
# dynamic = ["version"]
authors = [
    { name="Alistair Curd", email="a.curd@leeds.ac.uk" }
]
description = "A package for point pattern analysis: Pattern Extraction from Relative Positions of Localisations"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy~=1.26",
    "scipy~=1.12",
    "numdifftools~=0.9",
    "pandas~=2.2",
    "matplotlib~=3.8",
    "scikit-image~=0.22",
    "jupyter~=1.0",
    "jupytext~=1.16",
    "sphinx~=8.2"
]

[project.scripts]
relpos = "perpl.relative_positions:main"
rotsym2d = "perpl.rot_2d_symm_fit:main"

[project.urls]
Homepage = "https://github.com/AlistairCurd/PERPL-Python3"
Issues = "https://github.com/AlistairCurd/PERPL-Python3/issues"

# [tool.tox], [tox] ?